--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <container>
         <div class="main__images">
-             <image src="/img/kar11.png"></image>
+             <image src="img/kar11.png"></image>
 
         </div>
     </container>
@@ -27,16 +27,16 @@
         <h2 class="title-h2">Наши изделия</h2>
         <div class="grid">
             <div class="grid__cover">
-                <img src="/img/kar1.jpg" alt="">
+                <img src="img/kar1.jpg" alt="">
             </div>
             <div class="grid__cover">
-                <img src="/img/kar2.jpg" alt="">
+                <img src="img/kar2.jpg" alt="">
             </div>
             <div class="grid__cover">
-                <img src="/img/kar3.jpg" alt="">
+                <img src="img/kar3.jpg" alt="">
             </div>
             <div class="grid__cover">
-                <img src="/img/kar4.jpg" alt="">
+                <img src="img/kar4.jpg" alt="">
             </div>
         </div>
     </section>
